Refactorizado de algunos nombres de campos
